Now graphing is possible
It can graph, dark/light mode is now saved, and my mental has rapidly deteriorated due to implicit casting

--- a/temporal.html
+++ b/temporal.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>template</title>
+    <title>Temporal</title>
     <link rel="stylesheet" href="./styles/mainStyle.css">
     <link rel="stylesheet" href="./styles/graphStyle.css">
     <script src="https://d3js.org/d3.v4.js"></script>
@@ -22,7 +22,6 @@
       <button onclick="stacked()">stacked</button>
       <button onclick="streamline()">streamline</button>
       <button onclick="linegraph()">line</button>
-      <button onclick="wordcloud()">words</button>
       <div id="legend"></div>
       </div>
       <div id="mainbar" class="lightmode">
