--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
       <li>add css animations for the hovering and stuff</li>
       <li>maybe a nav bar at the top?</li>
       <li>more stuff I need to think about but I haven't yet</li>
-      <li>find a way to keep the modes across websites</li>
+      <li>make the graphing and general usecase less laggy and memory hogging</li>
+      <li>figure out temporal data since the current format is interesting</li>
+      <li>ask about what the statetips and countytips mean</li>
     <div class="wrapper">
-      <a href="./templateGraphSite.html" class="option" id="temporal"><div id="tooltip" class="lightmode">temporal</div></a>
-      <a href="" class="option" id="geographical"><div id="tooltip" class="lightmode">geographical</div></a>
+      <a href="./temporal.html" class="option" id="temporal"><div id="tooltip" class="lightmode">temporal</div></a>
+      <a href="./templateGraphSite.html" class="option" id="geographical"><div id="tooltip" class="lightmode">geographical</div></a>
       <a href="" class="option" id="textual"><div id="tooltip" class="lightmode">textual</div></a>
     </div>
     <button onclick="changeModes()" class="modeToggle">Light/Dark Mode</button>
