--- a/index.html
+++ b/index.html
@@ -3,31 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Covid-19 Analysis Homepage</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/mainStyle.css">
     <script type="text/javascript" src="./scripts/lightbulb.js"></script>
   </head>
   <body class="lightmode">
-    <h1>TITLE</h1>
-    <h2>SUBTITLE</h2>
+    <h1>Covid-19 Dataset Visualization</h1>
+    <h2>Website to present the data by me :)</h2>
     <p>Some text here that explains stuff I guess.</p>
     <p>todo</p>
-      <li>add images to the 3 options</li>
-      <li>find a color scheme that doesn't hurt my eyeballs</li>
-      <li>update the light/dark mode button</li>
-      <li>find a good font</li>
-      <li>create the 3 other pages</li>
-      <li>figure out what's supposed to be in the other 3 pages</li>
-      <li>add css animations for the hovering and stuff</li>
-      <li>maybe a nav bar at the top?</li>
-      <li>more stuff I need to think about but I haven't yet</li>
-      <li>make the graphing and general usecase less laggy and memory hogging</li>
-      <li>figure out temporal data since the current format is interesting</li>
-      <li>ask about what the statetips and countytips mean</li>
+      <li>show which dataset is in use</li>
     <div class="wrapper">
       <a href="./temporal.html" class="option" id="temporal"><div id="tooltip" class="lightmode">temporal</div></a>
       <a href="./templateGraphSite.html" class="option" id="geographical"><div id="tooltip" class="lightmode">geographical</div></a>
-      <a href="" class="option" id="textual"><div id="tooltip" class="lightmode">textual</div></a>
+      <a href="./textual.html" class="option" id="textual"><div id="tooltip" class="lightmode">textual</div></a>
     </div>
-    <button onclick="changeModes()" class="modeToggle">Light/Dark Mode</button>
+    <button onclick="changeModes()" class="modeToggle"><image id="lightdark" src="./styles/light_dark_mode.png"></image></button>
   </body>
 </html>
