polished the entire website
also added totalCount to the third button and cleaned up the site in general

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
   </head>
   <body class="lightmode">
     <h1>Covid-19 Dataset Visualization</h1>
-    <h2>Website to present the data by me :)</h2>
-    <p>Some text here that explains stuff I guess.</p>
-    <p>todo</p>
-      <li>show which dataset is in use</li>
+    <h2>Visualizes Alexander Kahanek's dataset of related tweets</h2>
+    <p>Notes:</p>
+    <li>The geographical site is not done</li>
+    <li>The images are temporary</li>
+    <li>The word cloud is a boring arial font with non-dynamic colors</li>
+    <li>The world cloud has also not realized that they are not in frame</li>
+  </br>
     <div class="wrapper">
-      <a href="./temporal.html" class="option" id="temporal"><div id="tooltip" class="lightmode">temporal</div></a>
-      <a href="./templateGraphSite.html" class="option" id="geographical"><div id="tooltip" class="lightmode">geographical</div></a>
-      <a href="./textual.html" class="option" id="textual"><div id="tooltip" class="lightmode">textual</div></a>
+      <a href="./temporal.html" class="option" id="temporal"><div id="tooltip" class="lightmode"><p>Temporal Data</p></div></a>
+      <a href="./templateGraphSite.html" class="option" id="geographical"><div id="tooltip" class="lightmode"><p>Geographical Data</p></div></a>
+      <a href="./textual.html" class="option" id="textual"><div id="tooltip" class="lightmode"><p>Textual Data</p></div></a>
     </div>
     <button onclick="changeModes()" class="modeToggle"><image id="lightdark" src="./styles/light_dark_mode.png"></image></button>
   </body>
+  <p id="shamelessplug">Created by Ben Wang (github.com/wbne)</p>
 </html>
