--- a/temporal.html
+++ b/temporal.html
@@ -17,7 +17,7 @@
       </br>
       <button onclick="numbers()">Numbers</button>
       </br>
-      <button>Total Count</button>
+      <button onclick="totalCount()">Total Count</button>
       </br>
       <button class="nextPage" onclick="nextFile()"></button>
       <button class="backPage" onclick="prevFile()"></button>
@@ -25,7 +25,7 @@
       </div>
       <div id="mainbar" class="lightmode">
       </div>
-
+      <p id="currentFile">Current File: </p>
     </div>
     <button onclick="changeModes()" class="modeToggle"><image src="../styles/light_dark_mode.png" id="lightdark"></image></button>
     <a href="./index.html" class="backButton"><image src="../styles/home_icon.png" id="home"></image></a>
